--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -38,17 +38,21 @@
         </a>
       </li>
     </ul>
-    <div class="profile-content">
-      <div class="profile">
-        <div class="profile-details">
-          <img src="profile.jpg" alt="profile-pic">
-          <div class="name-job">
-            <div class="name">John Doe</div>
-            <div class="job">Marketer</div>
+    <div class="profile-content">  
+      <% if user_signed_in? %>  
+        <div class="profile">
+          <div class="profile-details">
+            <img src="profile.jpg" alt="profile-pic">
+            <div class="name-job">
+              <div class="name">John Doe</div>
+              <div class="job">Marketer</div>
+            </div>
           </div>
+          <%= link_to new_user_session_path do %>
+            <i class="bx bx-log-out" id="log-out"></i>
+          <% end %>  
         </div>
-        <i class="bx bx-log-out" id="log-out"></i>
-      </div>
+      <% end %>
     </div>
   </div>
   <div class="home-content">
