--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -48,10 +48,12 @@
               <div class="job">Marketer</div>
             </div>
           </div>
-          <%= link_to new_user_session_path do %>
+          <%= link_to destroy_user_session_path, method: :delete do %>
             <i class="bx bx-log-out" id="log-out"></i>
           <% end %>  
         </div>
+      <% else %>
+        <%= link_to "Login", new_user_session_path %>
       <% end %>
     </div>
   </div>
