--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -19,7 +19,7 @@ body {
   top: 0;
   left: 0;
   height: 100%;
-  width: 74px;
+  width: 80px;
   background: #11101d;
   padding: 6px 14px;
   transition: all 0.5s ease;
@@ -27,6 +27,7 @@ body {
 
 .sidebar.active {
   width: 240px;
+  border-right: 2px solid black;
 }
 
 .sidebar .logo-content .logo {
@@ -60,7 +61,7 @@ body {
   color: aliceblue;
   left: 50%;
   top: 6px;
-  font-size: 20px;
+  font-size: 28px;
   height: 50px;
   width: 50px;
   text-align: center;
@@ -71,6 +72,10 @@ body {
 
 .sidebar.active #btn {
   left: 90%;
+}
+
+.nav-list i {
+  font-size: 26px;
 }
 
 .sidebar ul {
@@ -117,7 +122,7 @@ body {
   color: #1d1b31;
 }
 
-.sidebar ul li a {
+.sidebar ul li .nav-btn {
   color: aliceblue;
   display: flex;
   align-items: center;
@@ -125,6 +130,7 @@ body {
   transition: all 0.4s ease;
   border-radius: 12px;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .sidebar ul li a:hover {
@@ -211,7 +217,7 @@ body {
   transform: translateX(-50%);
   min-width: 50px;
   line-height: 50px;
-  font-size: 20px;
+  font-size: 26px;
   border-radius: 12px;
   text-align: center;
   transition: all 0.4s ease;
@@ -223,22 +229,83 @@ body {
   background: none;
 }
 
-.home-content {
+.stylebar-wrapper {
   position: absolute;
   height: 100%;
-  width: calc(100% - 78px);
-  left: 78px;
+  width: 90px;
+  left: 80px;
   transition: all 0.5s ease;
+  opacity: 0;
 }
 
-.home-content .text {
-  font-size: 25px;
-  font-weight: 500;
-  color: #1d1b31;
-  margin: 12px;
+.stylebar-wrapper.active {
+  opacity: 1;
 }
 
-.sidebar.active ~ .home-content {
-  width: calc(100% - 240px);
+.sidebar.active ~ .stylebar-wrapper {
+  width: 90px;
   left: 240px;
+}
+
+.stylebar {
+  height: 100%;
+  background: #11101d;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 90px 0;
+}
+
+.style {
+  background: #1d1b31;
+  border-radius: 12px;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.style-options-wrapper {
+  position: absolute;
+  padding: 130px 0;
+  width: 400px;
+  height: 100%;
+  left: 170px;
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+
+.style-options-wrapper.active {
+  opacity: 1;
+}
+
+.sidebar.active ~ .style-options-wrapper {
+  width: 400px;
+  height: 100%;
+  left: 330px;
+}
+
+.style-options {
+  height: 100%;
+  width: 100%;
+  background: #11101d;
+  border-radius: 0 12px 12px 0;
+  border-left: 2px solid black;
+}
+
+.style-section-name {
+  margin: 0;
+  height: 70px;
+  width: 100%;
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  color: aliceblue;
+  vertical-align: unset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
