--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,13 @@
 
 // Your CSS partials
 @import "components/index";
-@import "pages/index";
+@import "components/searchbar";
 @import "components/card";
+@import "pages/index";
 @import "widgets/index";
+
+
+body {
+  background-color: #F0F8FF;
+}
+
