--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -41,22 +41,22 @@
   </div>
   <div class="stylebar-wrapper">
     <div class="stylebar">
-      <div class="style layout">
+      <div class="style layout-style">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M26.6665 2.66675H5.33317C3.8665 2.66675 2.6665 3.86675 2.6665 5.33342V26.6668C2.6665 28.1334 3.8665 29.3334 5.33317 29.3334H26.6665C28.1332 29.3334 29.3332 28.1334 29.3332 26.6668V5.33342C29.3332 3.86675 28.1332 2.66675 26.6665 2.66675ZM10.6665 26.6668H5.33317V21.3334H10.6665V26.6668ZM10.6665 18.6667H5.33317V13.3334H10.6665V18.6667ZM10.6665 10.6667H5.33317V5.33342H10.6665V10.6667ZM18.6665 26.6668H13.3332V21.3334H18.6665V26.6668ZM18.6665 18.6667H13.3332V13.3334H18.6665V18.6667ZM18.6665 10.6667H13.3332V5.33342H18.6665V10.6667ZM26.6665 26.6668H21.3332V21.3334H26.6665V26.6668ZM26.6665 18.6667H21.3332V13.3334H26.6665V18.6667ZM26.6665 10.6667H21.3332V5.33342H26.6665V10.6667Z" fill="#F0F8FF"/>
         </svg>
       </div>
-      <div class="style size">
+      <div class="style size-style">
         <svg width="30" height="24" viewBox="0 0 30 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M26.6667 16H29.3333V18.6667H26.6667V16ZM26.6667 10.6667H29.3333V13.3333H26.6667V10.6667ZM29.3333 21.3333H26.6667V24C28 24 29.3333 22.6667 29.3333 21.3333ZM16 0H18.6667V2.66667H16V0ZM26.6667 5.33333H29.3333V8H26.6667V5.33333ZM26.6667 0V2.66667H29.3333C29.3333 1.33333 28 0 26.6667 0ZM0 5.33333H2.66667V8H0V5.33333ZM21.3333 0H24V2.66667H21.3333V0ZM21.3333 21.3333H24V24H21.3333V21.3333ZM2.66667 0C1.33333 0 0 1.33333 0 2.66667H2.66667V0ZM10.6667 0H13.3333V2.66667H10.6667V0ZM5.33333 0H8V2.66667H5.33333V0ZM0 10.6667V21.3333C0 22.8 1.2 24 2.66667 24H18.6667V10.6667H0ZM2.66667 21.3333L6 17.0533L8.38667 19.92L11.72 15.6267L16 21.3333H2.66667Z" fill="#F0F8FF"/>
         </svg>
       </div>
-      <div class="style font">
+      <div class="style font-style">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 5.33325V9.33325H18.6667V25.3333H22.6667V9.33325H29.3333V5.33325H12ZM4 15.9999H8V25.3333H12V15.9999H16V11.9999H4V15.9999Z" fill="#F0F8FF"/>
         </svg>
       </div>
-      <div class="style colors">
+      <div class="style colors-style">
       <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0)">
         <path d="M23.6668 9.33325L18.6668 4.33325L5.3335 17.6666V22.6666H10.3335L23.6668 9.33325ZM27.6135 5.38658C28.1335 4.86658 28.1335 4.02658 27.6135 3.50658L24.4935 0.386582C23.9735 -0.133418 23.1335 -0.133418 22.6135 0.386582L20.0002 2.99992L25.0002 7.99992L27.6135 5.38658Z" fill="#F0F8FF"/>
@@ -69,7 +69,7 @@
         </defs>
         </svg>
       </div>
-      <div class="style background">
+      <div class="style background-style">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M22.0799 11.92L10.1599 0L8.27992 1.88L11.4532 5.05333L4.58658 11.92C3.79992 12.7067 3.79992 13.9733 4.58658 14.7467L11.9199 22.08C12.3066 22.4667 12.8266 22.6667 13.3333 22.6667C13.8399 22.6667 14.3599 22.4667 14.7466 22.08L22.0799 14.7467C22.8666 13.9733 22.8666 12.7067 22.0799 11.92ZM6.94658 13.3333L13.3333 6.94667L19.7199 13.3333H6.94658ZM25.3333 15.3333C25.3333 15.3333 22.6666 18.2267 22.6666 20C22.6666 21.4667 23.8666 22.6667 25.3333 22.6667C26.7999 22.6667 27.9999 21.4667 27.9999 20C27.9999 18.2267 25.3333 15.3333 25.3333 15.3333Z" fill="#F0F8FF"/>
           <path d="M0 26.6667H32V32.0001H0V26.6667Z" fill="#F0F8FF" fill-opacity="0.6"/>
@@ -80,6 +80,98 @@
   <div class="style-options-wrapper">
     <div class="style-options">
       <h2 class="style-section-name"></h2>
+      <%# LAYOUT %>
+      <%# <div class="style-options-content layout">
+        <div class="layout-options">
+          <svg width="62" height="50" viewBox="0 0 62 50" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-top: 15px;">
+            <path d="M5 20C2.23333 20 0 22.2333 0 25C0 27.7667 2.23333 30 5 30C7.76667 30 10 27.7667 10 25C10 22.2333 7.76667 20 5 20ZM5 0C2.23333 0 0 2.23333 0 5C0 7.76667 2.23333 10 5 10C7.76667 10 10 7.76667 10 5C10 2.23333 7.76667 0 5 0ZM5 40C2.23333 40 0 42.2667 0 45C0 47.7333 2.26667 50 5 50C7.73334 50 10 47.7333 10 45C10 42.2667 7.76667 40 5 40ZM15 48.3333H61.6667V41.6667H15V48.3333ZM15 28.3333H61.6667V21.6667H15V28.3333ZM15 1.66667V8.33333H61.6667V1.66667H15Z" fill="#F0F8FF"/>
+          </svg>
+        <p>List</p>
+        </div>
+        <div class="layout-options">
+          <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-top: 15px;">
+            <path d="M54 0H6C2.7 0 0 2.7 0 6V54C0 57.3 2.7 60 6 60H54C57.3 60 60 57.3 60 54V6C60 2.7 57.3 0 54 0ZM18 54H6V42H18V54ZM18 36H6V24H18V36ZM18 18H6V6H18V18ZM36 54H24V42H36V54ZM36 36H24V24H36V36ZM36 18H24V6H36V18ZM54 54H42V42H54V54ZM54 36H42V24H54V36ZM54 18H42V6H54V18Z" fill="#F0F8FF"/>
+          </svg>
+        <p>Grid</p>
+        </div>
+        <div class="layout-options">
+          <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M37.5 67.5H56.25V45H37.5V67.5ZM15 67.5H33.75V18.75H15V67.5ZM60 67.5H78.75V45H60V67.5ZM37.5 18.75V41.25H78.75V18.75H37.5Z" fill="#F0F8FF"/>
+          </svg>
+        <p>Masonry</p>
+        </div>
+        <div class="layout-options">
+          <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M23.3332 63.3333H56.6665V13.3333H23.3332V63.3333ZM6.6665 56.6666H19.9998V19.9999H6.6665V56.6666ZM59.9998 19.9999V56.6666H73.3332V19.9999H59.9998Z" fill="#F0F8FF"/>
+          </svg>
+        <p>Slider</p>
+        </div>
+      </div> %>
+
+      <%# SIZE %>
+      <%# <div class="style-options-content size">
+        <div class="size-options">
+          <div class="size-square-wrapper">
+            <div class="size-square big"></div>
+          </div>
+          <div class="sizes">
+            <p class="size-letter">L</p>
+            <p class="size-pixels">460 x 600</p>
+          </div>
+        </div>
+        <div class="size-options">
+          <div class="size-square-wrapper">
+            <div class="size-square medium"></div>
+          </div>
+          <div class="sizes">
+            <p class="size-letter">M</p>
+            <p class="size-pixels">380 x 520</p>
+          </div>
+        </div>
+        <div class="size-options">
+          <div class="size-square-wrapper">
+            <div class="size-square small"></div>
+          </div>
+          <div class="sizes">
+            <p class="size-letter">S</p>
+            <p class="size-pixels">300 x 440</p>
+          </div>
+        </div>
+      </div> %>
+
+      <%# FONTS %>
+      <%# <div class="style-options-content font">
+        <div class="font-styles-wrapper">
+          <h3>Style</h3>
+          <div class="select-font-wrapper">
+            <select id="select-font"> %>
+              <%# @fonts.each do |key, value| %>
+                <%# <option value= %>
+                <%#= value %>>
+                <%#= key.capitalize %>
+                <%# </option> %>
+              <%# end %>
+            <%# </select>
+          </div>
+        </div>
+        <div class="font-size-wrapper">
+          <h3>Size</h3>
+          <div class="font-size-slider">
+            <input type="range" min="8" max="42" value="18" class="slider" id="font-size-slider">
+            <p class="input-result" id="font-size-value">18px</p>
+          </div>
+        </div>
+        <div class="font-color-wrapper">
+          <h3>Color</h3>
+          <div class="font-color-picker">
+            <input type="color" class="basic-color-picker">
+          </div>
+        </div>
+      </div> %>
+      <%# BACKGROND %>
+      <div class="style-options-content background">
+        <div id="picker"></div>
+      </div>
     </div>
   </div>
 </div>
