--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -170,7 +170,15 @@
       </div> %>
       <%# BACKGROND %>
       <div class="style-options-content background">
-        <div id="picker"></div>
+        <div class="wrap">
+          <div class="color-picker-wrapper">
+            <div class="colorPicker"></div>
+          </div>
+          <div class="hex-input-wrapper">
+            <span class="title">Selected Color:</span>
+            <input id="hexInput"></input>
+          </div>
+        </div>
       </div>
     </div>
   </div>
