--- a/app/views/widgets/edit.html.erb
+++ b/app/views/widgets/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5 pt-5">
-    <div class="row mt-5 pt-5">
-        <div class="col-6 offset-3">
+    <div class="row">
+        <div class="col-8 offset-2">
             <%= render 'shared/widgetbox' %>
         </div>    
     </div>
