--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -9,7 +9,21 @@
         min-height:100px;
         background-color: #11101D;
         border-radius: 8px 8px 0 0;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
     }
 }
+
+.nav-btn {
+    padding-right: 18px;
+    padding-left: 5px;
+    img {
+        padding: 5px;
+        border-radius: 3px;
+        box-shadow: 0 0 5px 3px rgb(235, 239, 245);
+    }
+}
+
 
 
