--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -20,8 +20,20 @@
     padding-left: 5px;
     img {
         padding: 5px;
-        border-radius: 3px;
+        border-radius: 50%;
         box-shadow: 0 0 5px 3px rgb(235, 239, 245);
+    }
+} 
+
+.content-dev {
+    max-width: 80%;
+    margin: 30px auto;
+    .input-box {
+        height: 60px;
+        border-radius: 3px;
+        border: 0.1em solid #32a1ce;
+        background-color: #ffffff;
+        box-shadow: 3px 3px 2px 2px rgba(121, 120, 122, 0.2);
     }
 }
 
