--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -17,10 +17,10 @@
 
 .nav-btn {
     padding-right: 12px;
-    img {
-        // padding: 5px;
-        // border-radius: 50%;
-        // box-shadow: 0 0 5px 3px rgb(235, 239, 245);
+    i {
+        color: white;
+        font-size: 50px;
+        text-shadow: 0 0 3px rgba(241, 249, 212, 0.6);
     }
 } 
 
@@ -30,9 +30,6 @@
     .input-box {
         height: 60px;
         border-radius: 3px;
-        // border: 0.1em solid #32a1ce;
-        // background-color: #ffffff;
-        // box-shadow: 3px 3px 2px 2px rgba(121, 120, 122, 0.2);
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -49,6 +46,7 @@
         padding: 8px;
         border: 1px solid rgb(95, 96, 100);
         border-radius: 3px;
+        box-shadow: 3px 3px 5px lightgrey;
     }
 }
 
