--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -7,12 +7,12 @@
   font-family: "Poppins", sans-serif;
 }
 
-body {
-  position: relative;
-  min-height: 100vh;
-  width: 100%;
-  overflow: hidden;
-}
+// body {
+  // position: relative;
+  // min-height: 100vh;
+  // width: 100%;
+  // overflow: hidden;
+// }
 
 .sidebar {
   position: fixed;
@@ -225,7 +225,7 @@ body {
 
 .home-content {
   position: absolute;
-  height: 100%;
+  // height: 100%;
   width: calc(100% - 78px);
   left: 78px;
   transition: all 0.5s ease;
