--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,7 +4,7 @@
         <i class='bx bxs-widget'></i>
         <div class="logo-name">Aprooft</div>
       </div>
-      <i class="bx bx-menu" id="btn"></i>
+      <i class="bx bx-menu" id="sidebar-hamburger-menu"></i>
     </div>
     <ul class="nav-list">
       <li>
@@ -80,106 +80,10 @@
   <div class="style-options-wrapper">
     <div class="style-options">
       <h2 class="style-section-name"></h2>
-      <%# LAYOUT %>
-      <%# <div class="style-options-content layout">
-        <div class="layout-options">
-          <svg width="62" height="50" viewBox="0 0 62 50" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-top: 15px;">
-            <path d="M5 20C2.23333 20 0 22.2333 0 25C0 27.7667 2.23333 30 5 30C7.76667 30 10 27.7667 10 25C10 22.2333 7.76667 20 5 20ZM5 0C2.23333 0 0 2.23333 0 5C0 7.76667 2.23333 10 5 10C7.76667 10 10 7.76667 10 5C10 2.23333 7.76667 0 5 0ZM5 40C2.23333 40 0 42.2667 0 45C0 47.7333 2.26667 50 5 50C7.73334 50 10 47.7333 10 45C10 42.2667 7.76667 40 5 40ZM15 48.3333H61.6667V41.6667H15V48.3333ZM15 28.3333H61.6667V21.6667H15V28.3333ZM15 1.66667V8.33333H61.6667V1.66667H15Z" fill="#F0F8FF"/>
-          </svg>
-        <p>List</p>
-        </div>
-        <div class="layout-options">
-          <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-top: 15px;">
-            <path d="M54 0H6C2.7 0 0 2.7 0 6V54C0 57.3 2.7 60 6 60H54C57.3 60 60 57.3 60 54V6C60 2.7 57.3 0 54 0ZM18 54H6V42H18V54ZM18 36H6V24H18V36ZM18 18H6V6H18V18ZM36 54H24V42H36V54ZM36 36H24V24H36V36ZM36 18H24V6H36V18ZM54 54H42V42H54V54ZM54 36H42V24H54V36ZM54 18H42V6H54V18Z" fill="#F0F8FF"/>
-          </svg>
-        <p>Grid</p>
-        </div>
-        <div class="layout-options">
-          <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M37.5 67.5H56.25V45H37.5V67.5ZM15 67.5H33.75V18.75H15V67.5ZM60 67.5H78.75V45H60V67.5ZM37.5 18.75V41.25H78.75V18.75H37.5Z" fill="#F0F8FF"/>
-          </svg>
-        <p>Masonry</p>
-        </div>
-        <div class="layout-options">
-          <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M23.3332 63.3333H56.6665V13.3333H23.3332V63.3333ZM6.6665 56.6666H19.9998V19.9999H6.6665V56.6666ZM59.9998 19.9999V56.6666H73.3332V19.9999H59.9998Z" fill="#F0F8FF"/>
-          </svg>
-        <p>Slider</p>
-        </div>
-      </div> %>
-
-      <%# SIZE %>
-      <%# <div class="style-options-content size">
-        <div class="size-options">
-          <div class="size-square-wrapper">
-            <div class="size-square big"></div>
-          </div>
-          <div class="sizes">
-            <p class="size-letter">L</p>
-            <p class="size-pixels">460 x 600</p>
-          </div>
-        </div>
-        <div class="size-options">
-          <div class="size-square-wrapper">
-            <div class="size-square medium"></div>
-          </div>
-          <div class="sizes">
-            <p class="size-letter">M</p>
-            <p class="size-pixels">380 x 520</p>
-          </div>
-        </div>
-        <div class="size-options">
-          <div class="size-square-wrapper">
-            <div class="size-square small"></div>
-          </div>
-          <div class="sizes">
-            <p class="size-letter">S</p>
-            <p class="size-pixels">300 x 440</p>
-          </div>
-        </div>
-      </div> %>
-
-      <%# FONTS %>
-      <%# <div class="style-options-content font">
-        <div class="font-styles-wrapper">
-          <h3>Style</h3>
-          <div class="select-font-wrapper">
-            <select id="select-font"> %>
-              <%# @fonts.each do |key, value| %>
-                <%# <option value= %>
-                <%#= value %>>
-                <%#= key.capitalize %>
-                <%# </option> %>
-              <%# end %>
-            <%# </select>
-          </div>
-        </div>
-        <div class="font-size-wrapper">
-          <h3>Size</h3>
-          <div class="font-size-slider">
-            <input type="range" min="8" max="42" value="18" class="slider" id="font-size-slider">
-            <p class="input-result" id="font-size-value">18px</p>
-          </div>
-        </div>
-        <div class="font-color-wrapper">
-          <h3>Color</h3>
-          <div class="font-color-picker">
-            <input type="color" class="basic-color-picker">
-          </div>
-        </div>
-      </div> %>
-      <%# BACKGROND %>
-      <%# <div class="style-options-content background">
-        <div class="wrap">
-          <div class="color-picker-wrapper">
-            <div class="colorPicker"></div>
-          </div>
-          <div class="hex-input-wrapper">
-            <span class="title">Selected Color</span>
-            <input id="hexInput"></input>
-          </div>
-        </div>
-      </div> %>
+        <%= render  "shared/sidebar/style_layout" %>
+        <%= render  "shared/sidebar/style_font" %>
+        <%= render  "shared/sidebar/style_size" %>
+        <%= render  "shared/sidebar/style_background" %>
     </div>
   </div>
 </div>
