--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -13,11 +13,25 @@
 //   width: 100%;
 //   overflow: hidden;
 // }
+.main-content {
+  display: flex;
+  height: 100vh;
+}
+
+.left-column-sidebar {
+  height: 100%;
+  display: flex;
+}
+
+.right-column-sidebar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: relative;
   height: 100%;
   width: 80px;
   background: #11101d;
