--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -1,1 +1,8 @@
-
+<div class="main-content">
+  <div class="left-column-sidebar">
+    <%= render  "shared/sidebar" %>
+  </div>
+  <div class="right-column-content">
+    <div></div>
+  </div>
+</div>
