--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -21,7 +21,11 @@
   <div class="widgets-all-list">
     <% @widgets.where(user_id: current_user.id).each do |product| %>
     <div class="card-pick fade-in">
+      <% if product.product_pic.present?%>
+      <%= cl_image_tag product.product_pic.key  %>
+      <% else %>
      <img src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2846&q=80" alt="">
+      <% end %>
      <div class="card-pick-info">
       <h2> <%= product.product_title %> </h2>
      </div>
