--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -61,6 +61,7 @@
       <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 5.33325V9.33325H18.6667V25.3333H22.6667V9.33325H29.3333V5.33325H12ZM4 15.9999H8V25.3333H12V15.9999H16V11.9999H4V15.9999Z" fill="#F0F8FF"/>
       </svg>
+    </div>
     <div class="style" id="colors-style">
     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g clip-path="url(#clip0)">
