change @fonts to global variable $fonts

--- a/app/views/widgets/edit.html.erb
+++ b/app/views/widgets/edit.html.erb
@@ -1,7 +1,14 @@
-<div class="container mt-5 pt-5">
-    <div class="row">
-        <div class="col-8 offset-2">
-            <%= render 'shared/widgetbox' %>
-        </div>    
+<div class="main-content">
+    <div class="left-column-sidebar">
+        <%= render  "shared/sidebar" %>
+    </div>
+    <div class="right-column-content">
+    <div class="right-column-content">
+        <div class="container mt-5 pt-5">
+            <div class="row">
+                <div class="col-8 offset-2">
+                <%= render 'shared/widgetbox' %>
+            </div>    
+        </div>
     </div>
 </div>
