--- a/app/views/shared/sidebar/_style_font.html.erb
+++ b/app/views/shared/sidebar/_style_font.html.erb
@@ -3,7 +3,7 @@
     <h3>Style</h3>
     <div class="select-font-wrapper">
       <select id="select-font"> %>
-        <% @fonts.each do |key, value| %>
+        <% $fonts.each do |key, value| %>
           <option value=<%= value %>><%= key.capitalize %>
           </option>
         <% end %>
