share sidebar in widgets/:id/edit page

--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -1,6 +1,6 @@
 .widget-dev {
     min-height: 80vh;
-    max-width: 620px;
+    width: 550px;
     border-radius: 8px;
     box-shadow: 0 0 10px 3px rgb(187, 185, 185); 
     .topbar-dev {
