--- a/app/assets/stylesheets/widgets/_list.scss
+++ b/app/assets/stylesheets/widgets/_list.scss
@@ -13,7 +13,7 @@
     display: flex;
 }
 
-.right-column-sidebar {
+.right-column-content {
     display: flex;
     justify-content: center;
     align-items: center;
