connected index and sidebar

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -17,11 +17,9 @@
   display: flex;
 }
 
-.right-column-sidebar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.right-column-content {
   flex-grow: 1;
+  padding: 80px;
 }
 
 .sidebar {
