--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -1,30 +1,37 @@
+.products-view-wrapper {
+  display: none;
+}
+
+.products-view-wrapper.active {
+  display: block;
+}
+
 .search-button {
     background-color: transparent;
     border-color: transparent;
     position: relative;
-    left: -49px;
+    right: 130%;
 }
 
-.flex {
+.product-searchbar {
   display: flex;
   align-items: center;
-  & input {
-    width: 100%;
+  position: relative;
+  width: 100%;
+  & .product-searchbar-field {
+    width: 50%;
   }
 }
 
 .form-control {
-  border-radius: 5px;
+  border-radius: 12px;
   height: 60px;
   background-color: #DBDFE2;
 }
 
 
 
-.searchbar-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 32px;
+.product-searchbar-wrapper {
     margin-bottom: 32px;
 }
 
