--- a/app/assets/stylesheets/widgets/_list.scss
+++ b/app/assets/stylesheets/widgets/_list.scss
@@ -4,18 +4,17 @@
 }
 
 .main-content {
-    display: flex;
-    height: 100vh;
+  display: flex;
+  height: 100vh;
+  background-color: aliceblue;
 }
 
 .left-column-sidebar {
-    height: 100%;
-    display: flex;
+  height: 100%;
+  display: flex;
 }
 
-.right-column-sidebar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
+.right-column-content {
+  flex-grow: 1;
+  padding: 80px;
 }
