--- a/app/assets/stylesheets/components/_video_card_list.scss
+++ b/app/assets/stylesheets/components/_video_card_list.scss
@@ -50,9 +50,9 @@
     color: #fff;  
     opacity: 0.87;
     position: absolute;
-    left: 43%;
-    top: 27%;
-    font-size: 39px;
+    left: 39%;
+    top: 21%;
+    font-size: 40px;
     // transform: translate(-50%,-50%);
 }
 
@@ -77,20 +77,27 @@
     font-size: 14px;
     color: #70757a;
     .list-info-channel {
-        display: block;
+        // display: block;
         max-width: 100%;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+        display: -webkit-box;
     }
     .list-info-number {
         font-size: 13px;
     }
+    .list-info-number span {
+        margin-right: 9px;
+        margin-left: 2px;
+    }
 }
 
 .list-info-channel img {
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     border-radius: 50%;
-    margin-right: 2px;
+    margin-right: 3px;
 }
