--- a/app/assets/stylesheets/widgets/_list.scss
+++ b/app/assets/stylesheets/widgets/_list.scss
@@ -18,3 +18,9 @@
   flex-grow: 1;
   padding: 80px;
 }
+
+.right-column-content.show-view {
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
