--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -90,6 +90,7 @@
       <%= render  "shared/sidebar/style_layout" %>
       <%= render  "shared/sidebar/style_font" %>
       <%= render  "shared/sidebar/style_size" %>
+      <%= render "shared/sidebar/style_colors" %>
       <%= render  "shared/sidebar/style_background" %>
   </div>
 </div>
