--- a/app/views/shared/sidebar/_style_size.html.erb
+++ b/app/views/shared/sidebar/_style_size.html.erb
@@ -1,5 +1,5 @@
  <div class="style-options-content size">
-  <div class="size-options">
+  <div class="size-option" id="size-option-big">
     <div class="size-square-wrapper">
       <div class="size-square big"></div>
     </div>
@@ -8,7 +8,7 @@
       <p class="size-pixels">460 x 600</p>
     </div>
   </div>
-  <div class="size-options">
+  <div class="size-option" id="size-option-medium">
     <div class="size-square-wrapper">
       <div class="size-square medium"></div>
     </div>
@@ -17,7 +17,7 @@
       <p class="size-pixels">380 x 520</p>
     </div>
   </div>
-  <div class="size-options">
+  <div class="size-option" id="size-option-small">
     <div class="size-square-wrapper">
       <div class="size-square small"></div>
     </div>
