--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -4,5 +4,6 @@
   </div>
   <div class="right-column-content">
     <%= render "my_products" %>
+    <%= render 'shared/widgetbox' %>
   </div>
 </div>
