--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -1,8 +1,8 @@
 .widget-dev {
-    min-height: 80vh;
-    max-width: 620px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px 3px rgb(187, 185, 185); 
+    // min-height: 80vh;
+    // max-width: 620px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px 3px rgb(187, 185, 185);
     .topbar-dev {
         width: 100%;
         height:100px;
@@ -21,7 +21,7 @@
         font-size: 50px;
         text-shadow: 0 0 3px rgba(241, 249, 212, 0.6);
     }
-} 
+}
 
 .content-dev {
     max-width: 80%;
@@ -38,7 +38,7 @@
     display: flex;
     height: 72%;
     width: 100%;
-    input { 
+    input {
         width: 100%;
         padding: 8px;
         border: 1px solid rgb(118, 120, 125);
@@ -59,7 +59,7 @@
         margin-left: -37px;
     }
 }
-    
+
 .submit-dev {
     text-align: center;
 }
