--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -61,12 +61,17 @@
 }
     
 .submit-dev {
-    text-align: center;
+    height: 120px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .submit-dev-btn {
     color: #20EFE3;
-    padding: 12px 38px;
+    height: 50px;
+    width: 140px;
+    // padding: 12px 38px;
     border-radius: 3px;
     transition: background 0.3s ease;
     background: #11101D;
