add back action on video display page

--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -83,4 +83,16 @@
     text-decoration: none;
 }
 
+.submit-dev-btn-back {
+    color: #20EFE3;
+    height: 50px;
+    width: 140px;
+    // padding: 12px 38px;
+    border-radius: 3px;
+    transition: background 0.3s ease;
+    background: #11101D;
+    margin-left: 34%;
+    margin-top: 15px;
+}
+
 
