control input with preact

--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -71,7 +71,6 @@
     color: #20EFE3;
     height: 50px;
     width: 140px;
-    // padding: 12px 38px;
     border-radius: 3px;
     transition: background 0.3s ease;
     background: #11101D;
@@ -87,12 +86,16 @@
     color: #20EFE3;
     height: 50px;
     width: 140px;
-    // padding: 12px 38px;
     border-radius: 3px;
     transition: background 0.3s ease;
     background: #11101D;
     margin-left: 34%;
     margin-top: 15px;
+    &:hover {
+        background: #20EFE3;
+        color: #11101D;
+        text-decoration: none;
+    }
 }
 
 
